[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Road/assets/road.png" type="Texture" id=1]
[ext_resource path="res://Game/Road/RoadBody.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 616, 16 )

[node name="RoadBody" type="StaticBody2D"]
position = Vector2( 247.116, 256.088 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( -247.116, 255.912 )
scale = Vector2( 1.64324, 1 )
texture = ExtResource( 1 )
centered = false

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 352.884, 335.912 )
shape = SubResource( 1 )

[node name="sprite2" type="Sprite" parent="."]
position = Vector2( 968.884, 255.912 )
scale = Vector2( 1.64324, 1 )
texture = ExtResource( 1 )
centered = false

[node name="Collision2" type="CollisionShape2D" parent="."]
position = Vector2( 1576.88, 335.912 )
shape = SubResource( 1 )
